# AIspider

./: .env.example  .gitignore  AIspider架构设计文档.md  ENV_CHECK.md  FINAL_CHECK.md  Makefile  README.md  alembic.ini  alert_rules.example.yaml  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  scrapy.cfg  提示词.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial.py  002_quarantine_timestamp_compat.py  003_auth_users.py  004_eastmoney_notice.py
deploy/: add_remote_worker.sh  grafana-dashboard-provisioning.yml  grafana-dashboard.json  health_check.sh  scale_workers.sh
docker/: api.Dockerfile  monitor.Dockerfile  prometheus.yml  proxy.Dockerfile  scheduler.Dockerfile  spider.Dockerfile
docker/nginx/: Dockerfile  nginx.conf
docs/: API.md  DEPLOY.md  alert_rules.md  crawler_framework_analysis.md
frontend/: BUG_FIXES.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue
src/: config.py  config_groups.py
src/api/: __init__.py  auth.py  deps.py  main.py  user_repo.py
src/infra/: __init__.py  connections.py  health.py  metrics.py  utils.py
src/logger/: __init__.py  filters.py  intercept.py  setup.py  sinks.py
src/monitor/: __init__.py  alert_consumer.py  rule_engine.py  watchdog.py
src/proxy/: base.py  (+7 more)
tests/: conftest.py  test_api.py  test_buffer.py  test_config.py  test_monitor.py  test_proxy.py  test_proxy_pool.py  test_quality.py  test_queue.py  test_rule_engine.py  test_scheduler.py  test_scheduler_service.py  test_seed.py  test_validator.py  test_writer.py
(+81 files in other folders)
