[project]
name = "aispider"
version = "0.1.0"
description = "分布式爬虫框架"
requires-python = ">=3.12"
dependencies = [
    # 基础设施
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    # Redis
    "redis[hiredis]>=5.0",
    # PostgreSQL
    "psycopg[binary,pool]>=3.1",
    "psycopg2-binary>=2.9",  # Alembic 需要
    # 时区处理
    "pytz>=2024.1",
    # HTTP 请求
    "requests>=2.31",
    "httpx>=0.27",
    # Kafka
    "aiokafka>=0.10",
    # MinIO
    "miniopy-async>=1.0",
    # 日志
    "loguru>=0.7",
    # 监控
    "prometheus-client>=0.20",
    # Scrapy
    "scrapy>=2.11",
    "scrapy-redis>=0.7",
    # 调度
    "apscheduler>=4.0.0a1",
    # API
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pyjwt>=2.8",
    "bcrypt>=4.1",
    # 数据库迁移
    "alembic>=1.13",
    "sqlalchemy>=2.0",
    # YAML 配置
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.3",
]
